dom/base/test/jsmodules/importmaps/good/module_3.mjs
// eslint-disable-next-line import/no-unassigned-import
import {} from "../circular_dependency.mjs";

export function exportedFunction() {
  return true;
}
